--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: ls -la
+      - run: gcc main.cpp
+      - run: ./a.out
   # Explore-GitHub-Actions:
   #   runs-on: ubuntu-latest
   #   steps:
